Move from FUTURE to INTRADAY group

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -1,33 +1,33 @@
-1055949,BTC,FUT_BITCOIN,FUTURE
-13917,FOAT,FUT_BOND_BTP,FUTURE
-8895,FGBL,FUT_BOND_EURO,FUTURE
-28719,FOAT,FUT_BOND_OAT,FUTURE
-8907,US,FUT_BOND_US,FUTURE
-8894,CC,FUT_COM_COCOA,FUTURE
-8832,KC,FUT_COM_COFFEE,FUTURE
-8831,HG,FUT_COM_COPPER,FUTURE
-8830,GC,FUT_COM_GOLD,FUTURE
-8862,NG,FUT_COM_NATURAL_GAS,FUTURE
-8833,B,FUT_COM_OIL_BRENT,FUTURE
-8849,CL,FUT_COM_OIL_CRUDE,FUTURE
-8883,PLD,FUT_COM_PALLADIUM,FUTURE
-8910,PLT,FUT_COM_PLATINUM,FUTURE
-8836,SI,FUT_COM_SILVER,FUTURE
-8869,HG,FUT_COM_SUGAR,FUTURE
-51,FCADJPY,FUT_FX_CADJPY,FUTURE
-16,FEURCAD,FUT_FX_EURCAD,FUTURE
-6,FEURGBP,FUT_FX_EURGBP,FUTURE
-9,FEURJPY,FUT_FX_EURJPY,FUTURE
-1,FEURUSD,FUT_FX_EURUSD,FUTURE
-54,FGBPCAD,FUT_FX_GBPCAD,FUTURE
-11,FGBPJPY,FUT_FX_GBPJPY,FUTURE
-2,FGBPUSD,FUT_FX_GBPUSD,FUTURE
-7,FUSDCAD,FUT_FX_USDCAD,FUTURE
-3,FUSDJPY,FUT_FX_USDJPY,FUTURE
-8853,F40,FUT_IND_CAC40,FUTURE
-8826,DX30,FUT_IND_DAX30,FUTURE
-8839,ES,FUT_IND_SP500,FUTURE
-8884,VIX,FUT_IND_VIX,FUTURE
+1055949,BTC,FUT_BITCOIN,INTRADAY
+13917,FOAT,FUT_BOND_BTP,INTRADAY
+8895,FGBL,FUT_BOND_EURO,INTRADAY
+28719,FOAT,FUT_BOND_OAT,INTRADAY
+8907,US,FUT_BOND_US,INTRADAY
+8894,CC,FUT_COM_COCOA,INTRADAY
+8832,KC,FUT_COM_COFFEE,INTRADAY
+8831,HG,FUT_COM_COPPER,INTRADAY
+8830,GC,FUT_COM_GOLD,INTRADAY
+8862,NG,FUT_COM_NATURAL_GAS,INTRADAY
+8833,B,FUT_COM_OIL_BRENT,INTRADAY
+8849,CL,FUT_COM_OIL_CRUDE,INTRADAY
+8883,PLD,FUT_COM_PALLADIUM,INTRADAY
+8910,PLT,FUT_COM_PLATINUM,INTRADAY
+8836,SI,FUT_COM_SILVER,INTRADAY
+8869,HG,FUT_COM_SUGAR,INTRADAY
+51,FCADJPY,FUT_FX_CADJPY,INTRADAY
+16,FEURCAD,FUT_FX_EURCAD,INTRADAY
+6,FEURGBP,FUT_FX_EURGBP,INTRADAY
+9,FEURJPY,FUT_FX_EURJPY,INTRADAY
+1,FEURUSD,FUT_FX_EURUSD,INTRADAY
+54,FGBPCAD,FUT_FX_GBPCAD,INTRADAY
+11,FGBPJPY,FUT_FX_GBPJPY,INTRADAY
+2,FGBPUSD,FUT_FX_GBPUSD,INTRADAY
+7,FUSDCAD,FUT_FX_USDCAD,INTRADAY
+3,FUSDJPY,FUT_FX_USDJPY,INTRADAY
+8853,F40,FUT_IND_CAC40,INTRADAY
+8826,DX30,FUT_IND_DAX30,INTRADAY
+8839,ES,FUT_IND_SP500,INTRADAY
+8884,VIX,FUT_IND_VIX,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 23643,MT,INT_ARCELOR,INTRADAY
@@ -59,6 +59,7 @@
 6990,SOIT,INT_SOITEC,INTRADAY
 7058,LOCAL,INT_SOLOCAL,INTRADAY
 417,STM,INT_STMICROELECTRONICS,INTRADAY
+7086,TFFP,INT_TF1,INTRADAY
 29466,TOT,INT_TOTAL,INTRADAY
 40315,EGAB,INT_TOTAL_GABON,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
