Remove commerzbank and BNP turbos

--- a/CommerzBankIntradayDownload.cfg
+++ b/CommerzBankIntradayDownload.cfg
@@ -1,25 +1,25 @@
 ISIN,MARKET,NAME
-DE000CK535Z7,CBFR,TURBO CAC40 CALL 3000
-DE000CE4XHR4,CBFR,TURBO CAC40 PUT 6000
-DE000CD07SS4,CBFR,TURBO CRUDE CALL 33
-DE000CD23SG6,CBFR,TURBO CRUDE PUT 70
-DE000CE8Z987,CBFR,TURBO OAT PUT 170
-DE000CB6TL98,CBFR,TURBO OAT CALL 132
-DE000CR5TNW2,CBFR,TURBO COPPER CALL 1.91
-DE000CM44TG1,CBFR,TURBO COPPER PUT 4.8
-DE000CK9PBW4,CBFR,TURBO GOLD PUT 1940
-DE000CD09KG2,CBFR,TURBO GOLD CALL 820
-DE000CM94EH6,CBFR,TURBO SILVER PUT 53
-DE000CR2USE4,CBFR,TURBO SILVER CALL 10
-DE000CN82HU5,CBFR,TURBO EURUSD CALL 0.89 
-DE000CZ8WZ78,CBFR,TURBO EURUSD PUT 1.55
-DE000CV2DPM3,CBFR,TURBO COFFEE CALL 0.91
-DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
-DE000CR7M784,CBFR,TURBO USD_JPY PUT 125
-DE000CK9SGP1,CBFR,TURBO USD_JPY CALL 96.6
-DE000CM94YH4,CBFR,TURBO VIX PUT 97
-DE000CV2ETH3,CBFR,TURBO VIX CALL 5.4
-DE000CD9FRB4,CBFR,TURBO COCOA PUT 2600
-DE000CE8YT20,CBFR,TURBO COCOA CALL 1520
-DE000CD9DKW0,CBFR,LEVERAGE VIX SHORT
-DE000CD9DKV2,CBFR,LEVERAGE VIX LONG
+#DE000CK535Z7,CBFR,TURBO CAC40 CALL 3000
+#DE000CE4XHR4,CBFR,TURBO CAC40 PUT 6000
+#DE000CD07SS4,CBFR,TURBO CRUDE CALL 33
+#DE000CD23SG6,CBFR,TURBO CRUDE PUT 70
+#DE000CE8Z987,CBFR,TURBO OAT PUT 170
+#DE000CB6TL98,CBFR,TURBO OAT CALL 132
+#DE000CR5TNW2,CBFR,TURBO COPPER CALL 1.91
+#DE000CM44TG1,CBFR,TURBO COPPER PUT 4.8
+#DE000CK9PBW4,CBFR,TURBO GOLD PUT 1940
+#DE000CD09KG2,CBFR,TURBO GOLD CALL 820
+#DE000CM94EH6,CBFR,TURBO SILVER PUT 53
+#DE000CR2USE4,CBFR,TURBO SILVER CALL 10
+#DE000CN82HU5,CBFR,TURBO EURUSD CALL 0.89 
+#DE000CZ8WZ78,CBFR,TURBO EURUSD PUT 1.55
+#DE000CV2DPM3,CBFR,TURBO COFFEE CALL 0.91
+#DE000CN1H302,CBFR,TURBO COFFEE PUT 1.7
+#DE000CR7M784,CBFR,TURBO USD_JPY PUT 125
+#DE000CK9SGP1,CBFR,TURBO USD_JPY CALL 96.6
+#DE000CM94YH4,CBFR,TURBO VIX PUT 97
+#DE000CV2ETH3,CBFR,TURBO VIX CALL 5.4
+#DE000CD9FRB4,CBFR,TURBO COCOA PUT 2600
+#DE000CE8YT20,CBFR,TURBO COCOA CALL 1520
+#DE000CL1GNK9,CBFR,LEVERAGE VIX SHORT
+#DE000CL1GNJ1,CBFR,LEVERAGE VIX LONG
