--- a/BNPIntradayDownload.user.cfg
+++ b/BNPIntradayDownload.user.cfg
@@ -1,3 +1,3 @@
 # Personal Google download config file
-FRBNPP00HKP3,06BIB,TURBO BRENT PUT 76
-FRBNPP00F7X3,ZQ54B,TURBO BRENT CALL 49
+#FRBNPP00HKP3,06BIB,TURBO BRENT PUT 76
+#FRBNPP00F7X3,ZQ54B,TURBO BRENT CALL 49
