--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -24,7 +24,7 @@ FR0007054358;Lyxor EURO STOXX 50;MSE;MSE.PA;FUND
 FR0010468983;Lyxor EURO STOXX 50 (2x) Leveraged;LVE;LVE.PA;FUND
 LU1829219390;Lyxor EURO STOXX Banks;BNKE;BNKE.PA;FUND
 FR0010010827;Lyxor FTSE MIB;ETFMIB;MIB.PA;FUND
-FR0010405431;Lyxor Greece;GRE;GRE.PA;FUND
+FR0010405431;LYXOR ETF PEA GRECE;GRE;GRE.PA;FUND
 FR0010342592;Lyxor NASDAQ-100 (2x) Leveraged;LQQ;LQQ.PA;FUND
 FR0011871144;Lyxor Afrique du Sud (South Africa);PAFS;PAFS.PA;FUND
 FR0011869346;Lyxor Amerique;PUSA;PUSA.PA;FUND
