Add michelin et peugeot

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -30,6 +30,7 @@
 8884,VIX,FUT_IND_VIX,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
+389,AIRP,INT_AIR LIQUIDE,INTRADAY
 23643,MT,INT_ARCELOR,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
@@ -49,8 +50,10 @@
 980201,ALKLK,INT_KERLINK,INTRADAY
 400,OR,INT_L'OREAL,INTRADAY
 47579,LVC,INT_LVC,INTRADAY
+411,MICP,INT_MICHELIN,INTRADAY
 6972,COX,INT_NICOX,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
+402,PEUP,INT_PEUGEOT,INTRADAY
 7079,RXPA,INT_RECYLEX,INTRADAY
 419,RENA,INT_RENAULT,INTRADAY
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
