--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -34,6 +34,7 @@
 23643,MT,INT_ARCELOR,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
+7078,BIOX,INT_BIOMERIEUX,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
 404,CA,INT_CARREFOUR,INTRADAY
 6959,CO,INT_CASINO GUICHARD,INTRADAY
