--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -31,6 +31,7 @@
 386,AC,INT_ACCOR,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 389,AIRP,INT_AIR LIQUIDE,INTRADAY
+412,AIR,INT_AIRBUS,INTRADAY
 23643,MT,INT_ARCELOR,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
@@ -64,8 +65,8 @@
 417,STM,INT_STMICROELECTRONICS,INTRADAY
 7086,TFFP,INT_TF1,INTRADAY
 416,TOT,INT_TOTAL,INTRADAY
-40315,EGAB,INT_TOTAL_GABON,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
+671,URW,INT_UNIBAIL RODAMCO,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
 13063,NFLX,INT_US_NETFLIX,INTRADAY
 525,INT_SPY,INT_US_SPY,INTRADAY
