--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -32,7 +32,7 @@
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 389,AIRP,INT_AIR LIQUIDE,INTRADAY
 412,AIR,INT_AIRBUS,INTRADAY
-23643,MT,INT_ARCELOR,INTRADAY
+6910,MT,INT_ARCELOR,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
 7078,BIOX,INT_BIOMERIEUX,INTRADAY
@@ -53,6 +53,7 @@
 400,OR,INT_L'OREAL,INTRADAY
 47579,LVC,INT_LVC,INTRADAY
 411,MICP,INT_MICHELIN,INTRADAY
+7021,CNAT,INT_NATIXIS,INTRADAY
 6972,COX,INT_NICOX,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
 402,PEUP,INT_PEUGEOT,INTRADAY
@@ -73,3 +74,4 @@
 13994,TSLA,INT_US_TESLA,INTRADAY
 7022,VLOF,INT_VALEO,INTRADAY
 408,VK,INT_VALLOUREC,INTRADAY
+418,SGEF,INT_VINCI,INTRADAY
