Clean up obsolete files

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -26,6 +26,7 @@
 3,FUSDJPY,FUT_FX_USDJPY,INTRADAY
 8853,F40,FUT_IND_CAC40,INTRADAY
 8826,DX30,FUT_IND_DAX30,INTRADAY
+8874,USTEC,FUT_IND_NASDAQ100,INTRADAY
 8839,ES,FUT_IND_SP500,INTRADAY
 8884,VIX,FUT_IND_VIX,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
@@ -68,6 +69,7 @@
 416,TOT,INT_TOTAL,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
 671,URW,INT_UNIBAIL RODAMCO,INTRADAY
+6435,AMZN,INT_US_AMAZON,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
 13063,NFLX,INT_US_NETFLIX,INTRADAY
 525,INT_SPY,INT_US_SPY,INTRADAY
