--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -45,6 +45,7 @@
 7,FUSDCAD,USDCAD,FOREX
 3,FUSDJPY,USDJPY,FOREX
 172,DE30,DAX Future,INDICES
+954696,GDOW,GDOW,INDICES
 44336,VIX,VIX,INDICES
 8884,VX,VIX Future,INDICES
 44337,VIX3M,VIX3M,INDICES
