--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -71,6 +71,8 @@
 671,URW,INT_UNIBAIL RODAMCO,INTRADAY
 6435,AMZN,INT_US_AMAZON,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
+6369,GOOGL,INT_US_GOOGLE,INTRADAY
+252,MSFT,INT_US_MICROSOFT,INTRADAY
 13063,NFLX,INT_US_NETFLIX,INTRADAY
 525,INT_SPY,INT_US_SPY,INTRADAY
 13994,TSLA,INT_US_TESLA,INTRADAY
