--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -60,6 +60,7 @@
 402,PEUP,INT_PEUGEOT,INTRADAY
 7079,RXPA,INT_RECYLEX,INTRADAY
 419,RENA,INT_RENAULT,INTRADAY
+414,SASY,INT_SANOFI,INTRADAY
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
 6981,SW,INT_SODEXO,INTRADAY
 6990,SOIT,INT_SOITEC,INTRADAY
