--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -38,6 +38,8 @@
 7056,BEN,INT_BENETEAU,INTRADAY
 7078,BIOX,INT_BIOMERIEUX,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
+397,BOUY,INT_BOUYGUES,INTRADAY
+390,CAPP,INT_CAPGEMINI,INTRADAY
 404,CA,INT_CARREFOUR,INTRADAY
 6959,CO,INT_CASINO GUICHARD,INTRADAY
 7051,CGG,INT_CGG,INTRADAY
