Add Cup Handle alerts

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -1,4 +1,3 @@
-1055949,BTC,FUT_BITCOIN,INTRADAY
 13917,FOAT,FUT_BOND_BTP,INTRADAY
 8895,FGBL,FUT_BOND_EURO,INTRADAY
 28719,FOAT,FUT_BOND_OAT,INTRADAY
@@ -48,6 +47,7 @@
 391,EDF,INT_EDF,INTRADAY
 395,ENGI,INT_ENGIE,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
+405,ESLX,INT_ESSILOR,INTRADAY
 6983,ILD,INT_ILIAD,INTRADAY
 7049,ING,INT_INGENICO GROUP,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
