--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,3 +1,6 @@
 # Personal Soc Gen download config file
 802022,5G10S,TURBO_NASDAQ 100 PUT 9600
+773343,3F27S,TURBO_NASDAQ 100 PUT 9900
 834400,5H46S,TURBO_GOLD PUT 1950
+782014,8F80S,TURBO_CAC40 PUT 4900
+752905,9D35S,TURBO_SP500 PUT 3300
