--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -46,6 +46,7 @@
 3,FUSDJPY,USDJPY,FOREX
 172,DE30,DAX Future,INDICES
 954696,GDOW,GDOW,INDICES
+40654,TLT,US Treasury Bond 20,INDICES
 44336,VIX,VIX,INDICES
 8884,VX,VIX Future,INDICES
 44337,VIX3M,VIX3M,INDICES
