Update SocGen cfg

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -38,12 +38,14 @@
 7078,BIOX,INT_BIOMERIEUX,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
 397,BOUY,INT_BOUYGUES,INTRADAY
+37591,BX4,INT_BX4,INTRADAY
 390,CAPP,INT_CAPGEMINI,INTRADAY
 404,CA,INT_CARREFOUR,INTRADAY
 6959,CO,INT_CASINO GUICHARD,INTRADAY
 7051,CGG,INT_CGG,INTRADAY
 407,ACA,INT_CREDIT AGRICOLE,INTRADAY
 9069,DBG,INT_DERICHEBOURG,INTRADAY
+1116320,DSP5,INT_DSP5,INTRADAY
 391,EDF,INT_EDF,INTRADAY
 395,ENGI,INT_ENGIE,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
@@ -55,6 +57,7 @@
 980201,ALKLK,INT_KERLINK,INTRADAY
 400,OR,INT_L'OREAL,INTRADAY
 47579,LVC,INT_LVC,INTRADAY
+399,LVMH,INT_LVMH,INTRADAY
 411,MICP,INT_MICHELIN,INTRADAY
 7021,CNAT,INT_NATIXIS,INTRADAY
 6972,COX,INT_NICOX,INTRADAY
