--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,7 +1,12 @@
 # Personal Soc Gen download config file
-#802022,5G10S,TURBO_NASDAQ 100 PUT 9600
-773343,3F27S,TURBO_NASDAQ 100 PUT 9900
+867372,4K32S,TURBO_NASDAQ 100 PUT 10400
 834400,5H46S,TURBO_GOLD PUT 1950
 #782014,8F80S,TURBO_CAC40 PUT 4900
 752905,9D35S,TURBO_SP500 PUT 3300
-641668,251WZ,TURBO_BRENT PUT 41
+617318,18Z7Z,TURBO_VIX CALL 19
+25583,SVIXZ,TURBO_VIX SHORT
+802010,4G03S,TURBO_BRENT PUT 55
+19587,SU5SZ,TURBO_SUGAR PUT
+19004,L5SUZ,TURBO_SUGAR CALL
+16515,U308Z,TURBO_NETFLIX CALL
+886384,1L07S,TURBO_TESLA PUT
