--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -47,11 +47,12 @@
 172,DE30,DAX Future,INDICES
 954696,GDOW,GDOW,INDICES
 170,US2000,RUSSELL2000,INDICES
+8941,TIP,TIPS,INDICES
 40654,TLT,US Treasury Bond 20,INDICES
 44336,VIX,VIX,INDICES
 8884,VX,VIX Future,INDICES
 44337,VIX3M,VIX3M,INDICES
-40671,VXX,VXX,INDICES
+1061957,VXX,VXX,INDICES
 45378,XAR,AEROSPACE & DEFENSE,SECTORS
 38293,XBI,BIOTECH,SECTORS
 40656,XLY,CONSUMER DISCRETIONARY,SECTORS
