--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -46,6 +46,7 @@
 3,FUSDJPY,USDJPY,FOREX
 172,DE30,DAX Future,INDICES
 954696,GDOW,GDOW,INDICES
+8864,US2000,RUSSEL2000,INDICES
 170,US2000,RUSSELL2000,INDICES
 8941,TIP,TIPS,INDICES
 40654,TLT,US Treasury Bond 20,INDICES
