--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -26,6 +26,7 @@
 8853,F40,FUT_IND_CAC40,INTRADAY
 8826,DX30,FUT_IND_DAX30,INTRADAY
 8874,USTEC,FUT_IND_NASDAQ100,INTRADAY
+8864,US2000,FUT_IND_RUSSEL2000,INTRADAY
 8839,ES,FUT_IND_SP500,INTRADAY
 8884,VIX,FUT_IND_VIX,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
@@ -60,7 +61,6 @@
 399,LVMH,INT_LVMH,INTRADAY
 411,MICP,INT_MICHELIN,INTRADAY
 7021,CNAT,INT_NATIXIS,INTRADAY
-6972,COX,INT_NICOX,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
 402,PEUP,INT_PEUGEOT,INTRADAY
 7079,RXPA,INT_RECYLEX,INTRADAY
@@ -71,6 +71,7 @@
 6990,SOIT,INT_SOITEC,INTRADAY
 7058,LOCAL,INT_SOLOCAL,INTRADAY
 417,STM,INT_STMICROELECTRONICS,INTRADAY
+13166,TCH,INT_TECHNICOLOR,INTRADAY
 7086,TFFP,INT_TF1,INTRADAY
 416,TOT,INT_TOTAL,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
