--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,7 +1,6 @@
 # Personal Soc Gen download config file
-867372,4K32S,TURBO_NASDAQ 100 PUT 10400
+993506,5R46S,TURBO_NASDAQ 100 PUT 10900
 834400,5H46S,TURBO_GOLD PUT 1950
-#782014,8F80S,TURBO_CAC40 PUT 4900
 752905,9D35S,TURBO_SP500 PUT 3300
 617318,18Z7Z,TURBO_VIX CALL 19
 25583,SVIXZ,TURBO_VIX SHORT
@@ -9,4 +8,4 @@
 19587,SU5SZ,TURBO_SUGAR PUT
 19004,L5SUZ,TURBO_SUGAR CALL
 16515,U308Z,TURBO_NETFLIX CALL
-886384,1L07S,TURBO_TESLA PUT
+993560,993506,TURBO_TESLA PUT 1500
