--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -50,6 +50,8 @@
 170,US2000,RUSSELL2000,INDICES
 8941,TIP,TIPS,INDICES
 40654,TLT,US Treasury Bond 20,INDICES
+40697,VUG,Vanguard Growth Index,INDICES
+40700,VTV,Vanguard Value Index,INDICES
 44336,VIX,VIX,INDICES
 8884,VX,VIX Future,INDICES
 44337,VIX3M,VIX3M,INDICES
