--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,11 +1,11 @@
 # Personal Soc Gen download config file
-993506,5R46S,TURBO_NASDAQ 100 PUT 10900
-834400,5H46S,TURBO_GOLD PUT 1950
-752905,9D35S,TURBO_SP500 PUT 3300
-617318,18Z7Z,TURBO_VIX CALL 19
-25583,SVIXZ,TURBO_VIX SHORT
 802010,4G03S,TURBO_BRENT PUT 55
-19587,SU5SZ,TURBO_SUGAR PUT
+25583,SVIXZ,TURBO_VIX SHORT
 19004,L5SUZ,TURBO_SUGAR CALL
 16515,U308Z,TURBO_NETFLIX CALL
-993560,993506,TURBO_TESLA PUT 1500
+#1014504,3S39S,TURBO_TESLA PUT 1800
+#993601,3R61S,TURBO_NASDAQ 100 PUT 11200
+#834400,5H46S,TURBO_GOLD PUT 1950
+#752905,9D35S,TURBO_SP500 PUT 3300
+#617318,18Z7Z,TURBO_VIX CALL 19
+#19587,SU5SZ,TURBO_SUGAR PUT
