--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -13,6 +13,7 @@
 8910,PLT,FUT_COM_PLATINUM,INTRADAY
 8836,SI,FUT_COM_SILVER,INTRADAY
 8869,HG,FUT_COM_SUGAR,INTRADAY
+1055949,BMC,FUT_FX_BITCOIN,INTRADAY
 51,FCADJPY,FUT_FX_CADJPY,INTRADAY
 16,FEURCAD,FUT_FX_EURCAD,INTRADAY
 6,FEURGBP,FUT_FX_EURGBP,INTRADAY
