--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -45,6 +45,7 @@
 404,CA,INT_CARREFOUR,INTRADAY
 6959,CO,INT_CASINO GUICHARD,INTRADAY
 7051,CGG,INT_CGG,INTRADAY
+6997,CNPP,INT_CNP,INTRADAY
 407,ACA,INT_CREDIT AGRICOLE,INTRADAY
 9069,DBG,INT_DERICHEBOURG,INTRADAY
 1116320,DSP5,INT_DSP5,INTRADAY
