--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -3,6 +3,7 @@
 25583,SVIXZ,TURBO_VIX SHORT
 19004,L5SUZ,TURBO_SUGAR CALL
 16515,U308Z,TURBO_NETFLIX CALL
+584797,163WZ,TURBO_CAC40 PUT 5200
 #1014504,3S39S,TURBO_TESLA PUT 1800
 #993601,3R61S,TURBO_NASDAQ 100 PUT 11200
 #834400,5H46S,TURBO_GOLD PUT 1950
