Update Alerts With Line Breaks

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -37,6 +37,7 @@
 6910,MT,INT_ARCELOR,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
+7033,BIC,INT_BIC,INTRADAY
 7078,BIOX,INT_BIOMERIEUX,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
 397,BOUY,INT_BOUYGUES,INTRADAY
