--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -4,6 +4,7 @@
 19004,L5SUZ,TURBO_SUGAR CALL
 16515,U308Z,TURBO_NETFLIX CALL
 584797,163WZ,TURBO_CAC40 PUT 5200
+1102349,4V63S,TURBO_EURUSD PUT 1.28
 #1014504,3S39S,TURBO_TESLA PUT 1800
 #993601,3R61S,TURBO_NASDAQ 100 PUT 11200
 #834400,5H46S,TURBO_GOLD PUT 1950
