Update Binck Portfoloios

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -3,11 +3,7 @@
 25583,SVIXZ,TURBO_VIX SHORT
 19004,L5SUZ,TURBO_SUGAR CALL
 16515,U308Z,TURBO_NETFLIX CALL
-584797,163WZ,TURBO_CAC40 PUT 5200
+#584797,163WZ,TURBO_CAC40 PUT 5200
 1102349,4V63S,TURBO_EURUSD PUT 1.28
-#1014504,3S39S,TURBO_TESLA PUT 1800
-#993601,3R61S,TURBO_NASDAQ 100 PUT 11200
-#834400,5H46S,TURBO_GOLD PUT 1950
-#752905,9D35S,TURBO_SP500 PUT 3300
-#617318,18Z7Z,TURBO_VIX CALL 19
-#19587,SU5SZ,TURBO_SUGAR PUT
+978353,4Q17S,TURBO_NATURAL GAS CALL 1.95
+1050394,6T61S,TURBO_COFFEE LONG X5
