--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -2,6 +2,9 @@
 8895,FGBL,FUT_BOND_EURO,INTRADAY
 28719,FOAT,FUT_BOND_OAT,INTRADAY
 8907,US,FUT_BOND_US,INTRADAY
+1055949,BMC,FUT_CC_BITCOIN,INTRADAY
+1061443,ETH,FUT_CC_ETHEREUM,INTRADAY
+1061973,XRP,FUT_CC_RIPPLE,INTRADAY
 8894,CC,FUT_COM_COCOA,INTRADAY
 8832,KC,FUT_COM_COFFEE,INTRADAY
 8831,HG,FUT_COM_COPPER,INTRADAY
@@ -13,8 +16,6 @@
 8910,PLT,FUT_COM_PLATINUM,INTRADAY
 8836,SI,FUT_COM_SILVER,INTRADAY
 8869,HG,FUT_COM_SUGAR,INTRADAY
-1055949,BMC,FUT_CC_BITCOIN,INTRADAY
-1061973,XRP,FUT_CC_RIPPLE,INTRADAY
 51,FCADJPY,FUT_FX_CADJPY,INTRADAY
 16,FEURCAD,FUT_FX_EURCAD,INTRADAY
 6,FEURGBP,FUT_FX_EURGBP,INTRADAY
@@ -52,7 +53,9 @@
 9069,DBG,INT_DERICHEBOURG,INTRADAY
 1116320,DSP5,INT_DSP5,INTRADAY
 391,EDF,INT_EDF,INTRADAY
+100156,EKI,INT_EKINOPS,INTRADAY
 395,ENGI,INT_ENGIE,INTRADAY
+40316,EOSI,INT_EOS IMAGING,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
 405,ESLX,INT_ESSILOR,INTRADAY
 6983,ILD,INT_ILIAD,INTRADAY
