--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,9 +1,11 @@
 # Personal Soc Gen download config file
 802010,4G03S,TURBO_BRENT PUT 55
 25583,SVIXZ,TURBO_VIX SHORT
-19004,L5SUZ,TURBO_SUGAR CALL
+1050396,6T63S,TURBO_SUGAR LONG X5
 16515,U308Z,TURBO_NETFLIX CALL
 #584797,163WZ,TURBO_CAC40 PUT 5200
 1102349,4V63S,TURBO_EURUSD PUT 1.28
 978353,4Q17S,TURBO_NATURAL GAS CALL 1.95
 1050394,6T61S,TURBO_COFFEE LONG X5
+1290375,98K4S,TURBO_TESLA SHORT X5
+925074,3N54S,TURBO_UNIBAIL LONG X5
