--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -32,6 +32,11 @@
 9244,TUR,Turkey,COUNTRY
 40664,EWU,UK,COUNTRY
 1055949,BTC,BITCOIN,FOREX
+1057388,BTCEUR,CC_BTCEUR,FOREX
+1057391,BTCUSD,CC_BTCUSD,FOREX
+1061443,ETH,CC_ETHEREUM,FOREX
+1061973,XRP,CC_RIPPLE,FOREX
+1061979,EOSEUR,CC_EOSEUR,FOREX
 51,FCADJPY,CADJPY,FOREX
 16,FEURCAD,EURCAD,FOREX
 6,FEURGBP,EURGBP,FOREX
