--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -1,10 +1,13 @@
-13917,FOAT,FUT_BOND_BTP,INTRADAY
+13917,FBTP,FUT_BOND_BTP,INTRADAY
 8895,FGBL,FUT_BOND_EURO,INTRADAY
 28719,FOAT,FUT_BOND_OAT,INTRADAY
 8907,US,FUT_BOND_US,INTRADAY
+1057388,BTCEUR,FUT_CC_BTCEUR,INTRADAY
+1057391,BTCUSD,FUT_CC_BTCUSD,INTRADAY
 1055949,BMC,FUT_CC_BITCOIN,INTRADAY
 1061443,ETH,FUT_CC_ETHEREUM,INTRADAY
 1061973,XRP,FUT_CC_RIPPLE,INTRADAY
+1061979,EOSEUR,FUT_CC_EOSEUR,INTRADAY
 8894,CC,FUT_COM_COCOA,INTRADAY
 8832,KC,FUT_COM_COFFEE,INTRADAY
 8831,HG,FUT_COM_COPPER,INTRADAY
