Add Palmares theme and user defined alerts

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -9,3 +9,5 @@
 1050394,6T61S,TURBO_COFFEE LONG X5
 1290375,98K4S,TURBO_TESLA SHORT X5
 925074,3N54S,TURBO_UNIBAIL LONG X5
+1319681,75P4S,TURBO_NASDAQ PUT 13750
+969223,0Q24S,TURBO_CARREFOUR LONG X5
