--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -4,10 +4,9 @@
 8907,US,FUT_BOND_US,INTRADAY
 1057388,BTCEUR,FUT_CC_BTCEUR,INTRADAY
 1057391,BTCUSD,FUT_CC_BTCUSD,INTRADAY
-1055949,BMC,FUT_CC_BITCOIN,INTRADAY
+1061979,EOSEUR,FUT_CC_EOSEUR,INTRADAY
 1061443,ETH,FUT_CC_ETHEREUM,INTRADAY
 1061973,XRP,FUT_CC_RIPPLE,INTRADAY
-1061979,EOSEUR,FUT_CC_EOSEUR,INTRADAY
 8894,CC,FUT_COM_COCOA,INTRADAY
 8832,KC,FUT_COM_COFFEE,INTRADAY
 8831,HG,FUT_COM_COPPER,INTRADAY
@@ -36,6 +35,7 @@
 8839,ES,FUT_IND_SP500,INTRADAY
 8884,VIX,FUT_IND_VIX,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
+943320,ALAGR,INT_AGROGENERATION,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 389,AIRP,INT_AIR LIQUIDE,INTRADAY
 412,AIR,INT_AIRBUS,INTRADAY
@@ -58,7 +58,6 @@
 391,EDF,INT_EDF,INTRADAY
 100156,EKI,INT_EKINOPS,INTRADAY
 395,ENGI,INT_ENGIE,INTRADAY
-40316,EOSI,INT_EOS IMAGING,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
 405,ESLX,INT_ESSILOR,INTRADAY
 6983,ILD,INT_ILIAD,INTRADAY
