Add Brent Leverage

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,5 +1,6 @@
 # Personal Soc Gen download config file
-802010,4G03S,TURBO_BRENT PUT 55
+1050412,6T54S,TURBO_BRENT LONG X3
+1050408,6T57S,TURBO_BRENT SHORT X3
 25583,SVIXZ,TURBO_VIX SHORT
 1050396,6T63S,TURBO_SUGAR LONG X5
 16515,U308Z,TURBO_NETFLIX CALL
