Update Palamares theme

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -11,4 +11,4 @@
 1290375,98K4S,TURBO_TESLA SHORT X5
 925074,3N54S,TURBO_UNIBAIL LONG X5
 1319681,75P4S,TURBO_NASDAQ PUT 13750
-969223,0Q24S,TURBO_CARREFOUR LONG X5
+991240,2R44S,TURBO_CARREFOUR LONG X2
