Update agent report

--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -31,12 +31,12 @@
 525,SPY,SPY,COUNTRY
 9244,TUR,Turkey,COUNTRY
 40664,EWU,UK,COUNTRY
+51,FCADJPY,CADJPY,FOREX
 1057388,BTCEUR,CC_BTCEUR,FOREX
 1057391,BTCUSD,CC_BTCUSD,FOREX
+1061979,EOSEUR,CC_EOSEUR,FOREX
 1061443,ETH,CC_ETHEREUM,FOREX
 1061973,XRP,CC_RIPPLE,FOREX
-1061979,EOSEUR,CC_EOSEUR,FOREX
-51,FCADJPY,CADJPY,FOREX
 16,FEURCAD,EURCAD,FOREX
 6,FEURGBP,EURGBP,FOREX
 9,FEURJPY,EURJPY,FOREX
@@ -75,3 +75,5 @@
 45382,XTL,TELECOM,SECTORS
 45383,XTN,TRANSPORTATION,SECTORS
 45385,XLU,UTILITIES,SECTORS
+13845,GME,GAMESTOP,USA
+13994,TSLA,TESLA,USA
