--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -75,5 +75,11 @@
 45382,XTL,TELECOM,SECTORS
 45383,XTN,TRANSPORTATION,SECTORS
 45385,XLU,UTILITIES,SECTORS
+6435,AMZN,AMAZON,USA
+6408,APPL,APPLE,USA
 13845,GME,GAMESTOP,USA
+6369,GOOGL,GOOGLE,USA
+252,MSFT,MICROSOFT,USA
+13063,NFLX,NETFLIX,USA
 13994,TSLA,TESLA,USA
+497,VOLVb,VOLVO,USA
