--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -8,7 +8,8 @@
 1102349,4V63S,TURBO_EURUSD PUT 1.28
 978353,4Q17S,TURBO_NATURAL GAS CALL 1.95
 1050394,6T61S,TURBO_COFFEE LONG X5
-1290375,98K4S,TURBO_TESLA SHORT X5
 925074,3N54S,TURBO_UNIBAIL LONG X5
 1319681,75P4S,TURBO_NASDAQ PUT 13750
 991240,2R44S,TURBO_CARREFOUR LONG X2
+1290375,98K4S,TURBO_TESLA SHORT X5
+1417880,65N0S,TURBO_SOITEC SHORT X5
