--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -70,6 +70,7 @@
 399,LVMH,INT_LVMH,INTRADAY
 411,MICP,INT_MICHELIN,INTRADAY
 7021,CNAT,INT_NATIXIS,INTRADAY
+943299,ALNOV,INT_NOVACYT,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
 402,PEUP,INT_PEUGEOT,INTRADAY
 7079,RXPA,INT_RECYLEX,INTRADAY
