Add forex TURBOS

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -5,7 +5,10 @@
 1050396,6T63S,TURBO_SUGAR LONG X5
 16515,U308Z,TURBO_NETFLIX CALL
 #584797,163WZ,TURBO_CAC40 PUT 5200
-1102349,4V63S,TURBO_EURUSD PUT 1.28
+1102349,4V63S,TURBO_EURUSD PUT 1.29
+13626,F373Z,TURBO_EURUSD CALL 1.09
+23447,857UZ,TURBO_USDJPY CALL 90.77
+15242,W172Z,TURBO_USDJPY PUT 122
 978353,4Q17S,TURBO_NATURAL GAS CALL 1.95
 1050394,6T61S,TURBO_COFFEE LONG X5
 925074,3N54S,TURBO_UNIBAIL LONG X5
