Remove comments and follow up

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -12,6 +12,7 @@
 978353,4Q17S,TURBO_NATURAL GAS CALL 1.95
 1050394,6T61S,TURBO_COFFEE LONG X5
 925074,3N54S,TURBO_UNIBAIL LONG X5
+1265239,03K7S,TURBO_RENAULT SHORT X5
 1382661,91M0S,TURBO_NASDAQ PUT 14950
 991240,2R44S,TURBO_CARREFOUR LONG X2
 1290375,98K4S,TURBO_TESLA SHORT X5
