Add DAX Leverage X3

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,6 +1,8 @@
 # Personal Soc Gen download config file
 1050412,6T54S,TURBO_BRENT LONG X3
 1050408,6T57S,TURBO_BRENT SHORT X3
+982907,DAL3S,TURBO_DAX LONG X3
+1055867,7T64S,TURBO_DAX SHORT X3
 25583,SVIXZ,TURBO_VIX SHORT
 1050396,6T63S,TURBO_SUGAR LONG X5
 16515,U308Z,TURBO_NETFLIX CALL
