Update theme background

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -18,6 +18,7 @@
 1382661,91M0S,TURBO_NASDAQ PUT 14950
 991240,2R44S,TURBO_CARREFOUR LONG X2
 1290375,98K4S,TURBO_TESLA SHORT X5
+1136882,03C1S,TURBO_TESLA LONG X2
 1417880,65N0S,TURBO_SOITEC SHORT X5
 1430662,66T1S,TURBO_GOLD CALL 1550
 1430640,66T9S,TURBO_GOLD PUT 2050
