Add Nat Gaz leverage

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -10,6 +10,7 @@
 8894,CC,FUT_COM_COCOA,INTRADAY
 8832,KC,FUT_COM_COFFEE,INTRADAY
 8831,HG,FUT_COM_COPPER,INTRADAY
+8851,CT,FUT_COM_COTTON,INTRADAY
 8830,GC,FUT_COM_GOLD,INTRADAY
 8862,NG,FUT_COM_NATURAL_GAS,INTRADAY
 8833,B,FUT_COM_OIL_BRENT,INTRADAY
