--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -11,7 +11,8 @@
 13626,F373Z,TURBO_EURUSD CALL 1.09
 23447,857UZ,TURBO_USDJPY CALL 90.77
 15242,W172Z,TURBO_USDJPY PUT 122
-978353,4Q17S,TURBO_NATURAL GAS CALL 1.95
+1289955,98K5S,TURBO_NATURAL GAS LONG X5
+1289956,15H9S,TURBO_NATURAL GAS SHORT X5
 1050394,6T61S,TURBO_COFFEE LONG X5
 925074,3N54S,TURBO_UNIBAIL LONG X5
 1265239,03K7S,TURBO_RENAULT SHORT X5
