--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -68,6 +68,7 @@
 47579,LVC,INT_LVC,INTRADAY
 399,LVMH,INT_LVMH,INTRADAY
 411,MICP,INT_MICHELIN,INTRADAY
+1088763,NAVYA,INT_NAVYA,INTRADAY
 1097383,NEOEN,INT_NEOEN,INTRADAY
 943299,ALNOV,INT_NOVACYT,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
