--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -6,7 +6,6 @@
 25583,SVIXZ,TURBO_VIX SHORT
 1050396,6T63S,TURBO_SUGAR LONG X5
 16515,U308Z,TURBO_NETFLIX CALL
-#584797,163WZ,TURBO_CAC40 PUT 5200
 1102349,4V63S,TURBO_EURUSD PUT 1.29
 13626,F373Z,TURBO_EURUSD CALL 1.09
 23447,857UZ,TURBO_USDJPY CALL 90.77
@@ -14,12 +13,11 @@
 1289955,98K5S,TURBO_NATURAL GAS LONG X5
 1289956,15H9S,TURBO_NATURAL GAS SHORT X5
 1050394,6T61S,TURBO_COFFEE LONG X5
-925074,3N54S,TURBO_UNIBAIL LONG X5
+29646,V201Z,TURBO_COCOA CALL X3
+26140,R750Z,TURBO_COCOA PUT X4
 1265239,03K7S,TURBO_RENAULT SHORT X5
 1382661,91M0S,TURBO_NASDAQ PUT 14950
-991240,2R44S,TURBO_CARREFOUR LONG X2
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
-1417880,65N0S,TURBO_SOITEC SHORT X5
 1430662,66T1S,TURBO_GOLD CALL 1550
 1430640,66T9S,TURBO_GOLD PUT 2050
