Update backtest results

--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -3,6 +3,8 @@
 1050408,6T57S,TURBO_BRENT SHORT X3
 982907,DAL3S,TURBO_DAX LONG X3
 1055867,7T64S,TURBO_DAX SHORT X3
+1050397,6T59S,TURBO_COPPER LONG X5
+1050400,6T38S,TURBO_COPPER SHORT X5
 25583,SVIXZ,TURBO_VIX SHORT
 1050396,6T63S,TURBO_SUGAR LONG X5
 16515,U308Z,TURBO_NETFLIX CALL
@@ -15,9 +17,11 @@
 1050394,6T61S,TURBO_COFFEE LONG X5
 29646,V201Z,TURBO_COCOA CALL X3
 26140,R750Z,TURBO_COCOA PUT X4
-1265239,03K7S,TURBO_RENAULT SHORT X5
+1382719,90M4S,TURBO_NASDAQ CALL 10850
 1382661,91M0S,TURBO_NASDAQ PUT 14950
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
 1430662,66T1S,TURBO_GOLD CALL 1550
 1430640,66T9S,TURBO_GOLD PUT 2050
+617655,18R6Z,TURBO_VSTOXX CALL 4.0
+1071306,2U62S,TURBO_VSTOXX PUT 52.0
