--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -68,6 +68,7 @@
 400,OR,INT_L'OREAL,INTRADAY
 47579,LVC,INT_LVC,INTRADAY
 399,LVMH,INT_LVMH,INTRADAY
+6946,MMTP,INT_METROPLE,INTRADAY
 411,MICP,INT_MICHELIN,INTRADAY
 1088763,NAVYA,INT_NAVYA,INTRADAY
 1097383,NEOEN,INT_NEOEN,INTRADAY
