--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -1,10 +1,10 @@
 ISIN;NOM;SICOVAM;TICKER;GROUP     =>   BE0003470755;SOLVAY;;SOLB;CAC40
 FR0003500008;CAC40;;CAC40;INDICES
 ABC003500387;SP500;;SP500;INDICES
-ABC003500379;Nasdaq 100;;NDX;INDICES
+ABC003500379;NASDAQ 100;;NDX;INDICES
 QS0011131826;CAC40NR;;CAC40NR;INDICES
 QS0011131834;CAC40GR;;CAC40GR;INDICES
-QS0011213756;CAC Mid & Small GR;;CMSG;INDICES
+QS0011213756;CAC MID & SMALL GR;;CMSG;INDICES
 FR0003999481;SBF120;;SBF120;INDICES
 EU0009658145;EURO STOXX 50;;ESTX50;INDICES
 #FR0010405431;LYXOR ETF PEA GRECE;;GRE;COUNTRY
@@ -13,57 +13,57 @@ EU0009658145;EURO STOXX 50;;ESTX50;INDICES
 #FR0013346681;LYXOR ETF PEA OBLIG EURO;;OBLI;FUND
 #FR0010411884;BX4;;BX4;FUND
 #FR0010592014;LVC;;LVC;FUND
-FR0010591362;Lyxor CAC 40 (-1x) Inverse;SHC;SHC.PA;FUND
-FR0010411884;Lyxor CAC 40 (-2x) Inverse;BX4;BX4.PA;FUND
-FR0010592014;Lyxor CAC 40 (2x) Leveraged;LVC;LVC.PA;FUND
-FR0011041334;Lyxor CAC MID 60;CACM;CACM.PA;FUND
-LU0908501215;Lyxor Core EURO STOXX 50;MSED;MSED.PA;FUND
-LU0252634307;Lyxor DAX (2x) Leveraged;LVD;LVD.PA;FUND
-LU0252633754;Lyxor DAX;LYXDAX;DAX.PA;FUND
-FR0007054358;Lyxor EURO STOXX 50;MSE;MSE.PA;FUND
-FR0010468983;Lyxor EURO STOXX 50 (2x) Leveraged;LVE;LVE.PA;FUND
-LU1829219390;Lyxor EURO STOXX Banks;BNKE;BNKE.PA;FUND
-FR0010010827;Lyxor FTSE MIB;ETFMIB;MIB.PA;FUND
+FR0010591362;LYXOR CAC 40 (-1X) INVERSE;SHC;SHC.PA;FUND
+FR0010411884;LYXOR CAC 40 (-2X) INVERSE;BX4;BX4.PA;FUND
+FR0010592014;LYXOR CAC 40 (2X) LEVERAGED;LVC;LVC.PA;FUND
+FR0011041334;LYXOR CAC MID 60;CACM;CACM.PA;FUND
+LU0908501215;LYXOR CORE EURO STOXX 50;MSED;MSED.PA;FUND
+LU0252634307;LYXOR DAX (2X) LEVERAGED;LVD;LVD.PA;FUND
+LU0252633754;LYXOR DAX;LYXDAX;DAX.PA;FUND
+FR0007054358;LYXOR EURO STOXX 50;MSE;MSE.PA;FUND
+FR0010468983;LYXOR EURO STOXX 50 (2X) LEVERAGED;LVE;LVE.PA;FUND
+LU1829219390;LYXOR EURO STOXX BANKS;BNKE;BNKE.PA;FUND
+FR0010010827;LYXOR FTSE MIB;ETFMIB;MIB.PA;FUND
 FR0010405431;LYXOR ETF PEA GRECE;GRE;GRE.PA;FUND
-FR0010342592;Lyxor NASDAQ-100 (2x) Leveraged;LQQ;LQQ.PA;FUND
-FR0011871144;Lyxor Afrique du Sud (South Africa);PAFS;PAFS.PA;FUND
-FR0011869346;Lyxor Amerique;PUSA;PUSA.PA;FUND
-FR0011869312;Lyxor Asie Pacifique;PAEJ;PAEJ.PA;FUND
-FR0011869205;Lyxor Brésil (Brazil);PRIO;PRIO.PA;FUND
-FR0011871078;Lyxor Chine (HSCEI);PASI;PASI.PA;FUND
-FR0011869338;Lyxor Corée (Korea);PKRW;PKRW.PA;FUND
-FR0011869270;Lyxor Dow Jones Industrial Average;PDJE;PDJE.PA;FUND
-FR0011882364;Lyxor Eau (World Water);AWAT;AWAT.PA;FUND
-FR0011440478;Lyxor Emergents (Emerging Markets);PLEM;PLEM.PA;FUND
-FR0011869304;Lyxor STOXX600 Immobilier Europe;PMEH;PMEH.PA;FUND
-FR0011869320;Lyxor Inde (India);PINR;PINR.PA;FUND
-FR0011871102;Lyxor Japon (TOPIX);PJPN;PJPN.PA;FUND
-FR0011884121;Lyxor Japon (TOPIX) - Couverte en EUR ;PJPH;PJPH.PA;FUND
-FR0011869353;Lyxor Monde (World);EWLD;EWLD.PA;FUND
-FR0011871110;Lyxor NASDAQ-100;PUST;PUST.PA;FUND
-FR0013346681;Lyxor Obligations d'État Euro;OBLI;OBLI.PA;FUND
-FR0011770775;Lyxor PEA PME;PEAP;PEAP.PA;FUND
-FR0011869387;Lyxor Russie (Russia IMI Select GDR);PRUS;PRUS.PA;FUND
-FR0011871128;Lyxor S&P 500;PSP5;PSP5.PA;FUND
-FR0011869395;Lyxor Turquie (Turkey);ETUR;ETUR.PA;FUND
-LU1327051279;Lyxor S&P 500 (-2x) Inverse;DSP5;DSP5.PA;FUND
-LU1834983394;Lyxor STOXX600 Automobiles & Parts;AUT;AUT.PA;FUND
-LU1834983477;Lyxor STOXX600 Banks;BNK;BNK.PA;FUND
-LU1834983550;Lyxor STOXX600 Basic Resources;BRE;BRE.PA;FUND
-LU1834983634;Lyxor STOXX600 Chemicals;CHM;CHM.PA;FUND
-LU1834983808;Lyxor STOXX600 Construction & Materials;CST;CST.PA;FUND
-LU1834984798;Lyxor STOXX600 Financial Services;FIN;FIN.PA;FUND
-LU1834985845;Lyxor STOXX600 Food & Beverage;FOO;FOO.PA;FUND
-LU1834986900;Lyxor STOXX600 Healthcare;HLT;HLT.PA;FUND
-LU1834987890;Lyxor STOXX600 Industrial Goods & Services;IND;IND.PA;FUND
-LU1834987973;Lyxor STOXX600 Insurance;INS;INS.PA;FUND
-LU1834988195;Lyxor STOXX600 Media;MDA;MDA.PA;FUND
-LU1834988278;Lyxor STOXX600 Oil & Gas;OIL;OIL.PA;FUND
-LU1834988351;Lyxor STOXX600 Personal & Household Goods;PHG;PHG.PA;FUND
-LU1812091194;Lyxor STOXX600 Real Estate;MEH;MEH.PA;FUND
-LU1834988435;Lyxor STOXX600 Retail;RTA;RTA.PA;FUND
-LU1834988518;Lyxor STOXX600 Technology;TNO;TNO.PA;FUND
-LU1834988609;Lyxor STOXX600 Telecommunications;TEL;TEL.PA;FUND
-LU1834988781;Lyxor STOXX600 Travel & Leisure;TRV;TRV.PA;FUND
-LU1834988864;Lyxor STOXX600 Utilities;UTI;UTI.PA;FUND
-LU1812092168;Lyxor STOXX Europe Select Dividend 30;SEL;SEL.PA;FUND
+FR0010342592;LYXOR NASDAQ-100 (2X) LEVERAGED;LQQ;LQQ.PA;FUND
+FR0011871144;LYXOR AFRIQUE DU SUD (SOUTH AFRICA);PAFS;PAFS.PA;FUND
+FR0011869346;LYXOR AMERIQUE;PUSA;PUSA.PA;FUND
+FR0011869312;LYXOR ASIE PACIFIQUE;PAEJ;PAEJ.PA;FUND
+FR0011869205;LYXOR BRÉSIL (BRAZIL);PRIO;PRIO.PA;FUND
+FR0011871078;LYXOR CHINE (HSCEI);PASI;PASI.PA;FUND
+FR0011869338;LYXOR CORÉE (KOREA);PKRW;PKRW.PA;FUND
+FR0011869270;LYXOR DOW JONES INDUSTRIAL AVERAGE;PDJE;PDJE.PA;FUND
+FR0011882364;LYXOR EAU (WORLD WATER);AWAT;AWAT.PA;FUND
+FR0011440478;LYXOR EMERGENTS (EMERGING MARKETS);PLEM;PLEM.PA;FUND
+FR0011869304;LYXOR STOXX600 IMMOBILIER EUROPE;PMEH;PMEH.PA;FUND
+FR0011869320;LYXOR INDE (INDIA);PINR;PINR.PA;FUND
+FR0011871102;LYXOR JAPON (TOPIX);PJPN;PJPN.PA;FUND
+FR0011884121;LYXOR JAPON (TOPIX) - COUVERTE EN EUR ;PJPH;PJPH.PA;FUND
+FR0011869353;LYXOR MONDE (WORLD);EWLD;EWLD.PA;FUND
+FR0011871110;LYXOR NASDAQ-100;PUST;PUST.PA;FUND
+FR0013346681;LYXOR OBLIGATIONS D'ÉTAT EURO;OBLI;OBLI.PA;FUND
+FR0011770775;LYXOR PEA PME;PEAP;PEAP.PA;FUND
+FR0011869387;LYXOR RUSSIE (RUSSIA IMI SELECT GDR);PRUS;PRUS.PA;FUND
+FR0011871128;LYXOR S&P 500;PSP5;PSP5.PA;FUND
+FR0011869395;LYXOR TURQUIE (TURKEY);ETUR;ETUR.PA;FUND
+LU1327051279;LYXOR S&P 500 (-2X) INVERSE;DSP5;DSP5.PA;FUND
+LU1834983394;LYXOR STOXX600 AUTOMOBILES & PARTS;AUT;AUT.PA;FUND
+LU1834983477;LYXOR STOXX600 BANKS;BNK;BNK.PA;FUND
+LU1834983550;LYXOR STOXX600 BASIC RESOURCES;BRE;BRE.PA;FUND
+LU1834983634;LYXOR STOXX600 CHEMICALS;CHM;CHM.PA;FUND
+LU1834983808;LYXOR STOXX600 CONSTRUCTION & MATERIALS;CST;CST.PA;FUND
+LU1834984798;LYXOR STOXX600 FINANCIAL SERVICES;FIN;FIN.PA;FUND
+LU1834985845;LYXOR STOXX600 FOOD & BEVERAGE;FOO;FOO.PA;FUND
+LU1834986900;LYXOR STOXX600 HEALTHCARE;HLT;HLT.PA;FUND
+LU1834987890;LYXOR STOXX600 INDUSTRIAL GOODS & SERVICES;IND;IND.PA;FUND
+LU1834987973;LYXOR STOXX600 INSURANCE;INS;INS.PA;FUND
+LU1834988195;LYXOR STOXX600 MEDIA;MDA;MDA.PA;FUND
+LU1834988278;LYXOR STOXX600 OIL & GAS;OIL;OIL.PA;FUND
+LU1834988351;LYXOR STOXX600 PERSONAL & HOUSEHOLD GOODS;PHG;PHG.PA;FUND
+LU1812091194;LYXOR STOXX600 REAL ESTATE;MEH;MEH.PA;FUND
+LU1834988435;LYXOR STOXX600 RETAIL;RTA;RTA.PA;FUND
+LU1834988518;LYXOR STOXX600 TECHNOLOGY;TNO;TNO.PA;FUND
+LU1834988609;LYXOR STOXX600 TELECOMMUNICATIONS;TEL;TEL.PA;FUND
+LU1834988781;LYXOR STOXX600 TRAVEL & LEISURE;TRV;TRV.PA;FUND
+LU1834988864;LYXOR STOXX600 UTILITIES;UTI;UTI.PA;FUND
+LU1812092168;LYXOR STOXX EUROPE SELECT DIVIDEND 30;SEL;SEL.PA;FUND
