--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -62,6 +62,7 @@
 405,ESLX,INT_ESSILOR,INTRADAY
 6983,ILD,INT_ILIAD,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
+1080089,ALKAL,INT_KALRAY,INTRADAY
 670,KER,INT_KERING,INTRADAY
 980201,ALKLK,INT_KERLINK,INTRADAY
 400,OR,INT_L'OREAL,INTRADAY
@@ -94,3 +95,4 @@
 7022,VLOF,INT_VALEO,INTRADAY
 408,VK,INT_VALLOUREC,INTRADAY
 418,SGEF,INT_VINCI,INTRADAY
+415,VIV,INT_VIVENDI,INTRADAY
