--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -1,6 +1,8 @@
 # Personal Soc Gen download config file
 1050412,6T54S,TURBO_BRENT LONG X3
 1050408,6T57S,TURBO_BRENT SHORT X3
+1321760,LER4S,TURBO_CAC LONG X4
+1321763,SHT4S,TURBO_CAC SHORT X4
 982907,DAL3S,TURBO_DAX LONG X3
 1055867,7T64S,TURBO_DAX SHORT X3
 1050397,6T59S,TURBO_COPPER LONG X5
