--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -4,6 +4,7 @@
 8907,US,FUT_BOND_US,INTRADAY
 1057388,BTCEUR,FUT_CC_BTCEUR,INTRADAY
 1057391,BTCUSD,FUT_CC_BTCUSD,INTRADAY
+1061477,DOGEUSD,FUT_CC_DOGE,INTRADAY
 1061979,EOSEUR,FUT_CC_EOSEUR,INTRADAY
 1061443,ETH,FUT_CC_ETHEREUM,INTRADAY
 1061973,XRP,FUT_CC_RIPPLE,INTRADAY
