--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -33,6 +33,7 @@
 8853,F40,FUT_IND_CAC40,INTRADAY
 8826,DX30,FUT_IND_DAX30,INTRADAY
 8874,USTEC,FUT_IND_NASDAQ100,INTRADAY
+8859,JP225,FUT_IND_NIKKEI,INTRADAY
 8864,US2000,FUT_IND_RUSSEL2000,INTRADAY
 8839,ES,FUT_IND_SP500,INTRADAY
 8884,VIX,FUT_IND_VIX,INTRADAY
@@ -42,6 +43,7 @@
 389,AIRP,INT_AIR LIQUIDE,INTRADAY
 412,AIR,INT_AIRBUS,INTRADAY
 6910,MT,INT_ARCELOR,INTRADAY
+13160,ATAR,INT_ATARI,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
 7033,BIC,INT_BIC,INTRADAY
