Update saxo transaction

--- a/EuronextDownload.cfg
+++ b/EuronextDownload.cfg
@@ -2,7 +2,6 @@ ISIN;NOM;SICOVAM;TICKER;GROUP     =>   BE0003470755;SOLVAY;;SOLB;CAC40
 FR0003500008;CAC40;;CAC40;INDICES
 ABC003500387;SP500;;SP500;INDICES
 ABC003500379;NASDAQ 100;;NDX;INDICES
-QS0011131826;CAC40NR;;CAC40NR;INDICES
 QS0011131834;CAC40GR;;CAC40GR;INDICES
 QS0011213756;CAC MID & SMALL GR;;CMSG;INDICES
 FR0003999481;SBF120;;SBF120;INDICES
@@ -13,6 +12,8 @@ EU0009658145;EURO STOXX 50;;ESTX50;INDICES
 #FR0013346681;LYXOR ETF PEA OBLIG EURO;;OBLI;FUND
 #FR0010411884;BX4;;BX4;FUND
 #FR0010592014;LVC;;LVC;FUND
+FR0013380607;LYXOR CAC 40 - ACC;CACC;CACC.PA;FUND
+FR0007052782;LYXOR CAC 40 - DIST;CAC;CAC.PA;FUND
 FR0010591362;LYXOR CAC 40 (-1X) INVERSE;SHC;SHC.PA;FUND
 FR0010411884;LYXOR CAC 40 (-2X) INVERSE;BX4;BX4.PA;FUND
 FR0010592014;LYXOR CAC 40 (2X) LEVERAGED;LVC;LVC.PA;FUND
