--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -77,6 +77,7 @@
 1097383,NEOEN,INT_NEOEN,INTRADAY
 943299,ALNOV,INT_NOVACYT,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
+946353,ALQGC,INT_QUATUM GENOMICS,INTRADAY
 419,RENA,INT_RENAULT,INTRADAY
 414,SASY,INT_SANOFI,INTRADAY
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
