--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -19,11 +19,11 @@
 1050394,6T61S,TURBO_COFFEE LONG X5
 29646,V201Z,TURBO_COCOA CALL X3
 26140,R750Z,TURBO_COCOA PUT X4
-1382719,90M4S,TURBO_NASDAQ CALL 10850
-1382661,91M0S,TURBO_NASDAQ PUT 14950
+#1382719,90M4S,TURBO_NASDAQ CALL 10850
+#1382661,91M0S,TURBO_NASDAQ PUT 14950
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
-1430662,66T1S,TURBO_GOLD CALL 1550
-1430640,66T9S,TURBO_GOLD PUT 2050
+27270,5N69Z,TURBO_GOLD CALL 1300
+1000551,7R49S,TURBO_GOLD PUT 2200
 617655,18R6Z,TURBO_VSTOXX CALL 4.0
 1071306,2U62S,TURBO_VSTOXX PUT 52.0
