--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -57,6 +57,7 @@
 40697,VUG,Vanguard Growth Index,INDICES
 40700,VTV,Vanguard Value Index,INDICES
 44336,VIX,VIX,INDICES
+44369,VXN,VXN,INDICES
 8884,VX,VIX Future,INDICES
 44337,VIX3M,VIX3M,INDICES
 1061957,VXX,VXX,INDICES
