--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -37,6 +37,7 @@
 8864,US2000,FUT_IND_RUSSEL2000,INTRADAY
 8839,ES,FUT_IND_SP500,INTRADAY
 8884,VIX,FUT_IND_VIX,INTRADAY
+44369,VXN,FUT_IND_VXN,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
 943320,ALAGR,INT_AGROGENERATION,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
