--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -19,8 +19,8 @@
 1050394,6T61S,TURBO_COFFEE LONG X5
 29646,V201Z,TURBO_COCOA CALL X3
 26140,R750Z,TURBO_COCOA PUT X4
-#1382719,90M4S,TURBO_NASDAQ CALL 10850
-#1382661,91M0S,TURBO_NASDAQ PUT 14950
+1668923,804VS,TURBO_NASDAQ CALL 13650
+1562740,541YS,TURBO_NASDAQ PUT 15250
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
 27270,5N69Z,TURBO_GOLD CALL 1300
