--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -45,6 +45,7 @@
 412,AIR,INT_AIRBUS,INTRADAY
 6910,MT,INT_ARCELOR,INTRADAY
 13160,ATAR,INT_ATARI,INTRADAY
+7019,ATOS,INT_ATOS,INTRADAY
 393,CS,INT_AXA,INTRADAY
 7056,BEN,INT_BENETEAU,INTRADAY
 7033,BIC,INT_BIC,INTRADAY
