--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -27,3 +27,4 @@
 1000551,7R49S,TURBO_GOLD PUT 2200
 617655,18R6Z,TURBO_VSTOXX CALL 4.0
 1071306,2U62S,TURBO_VSTOXX PUT 52.0
+1136866,02C8S,TURBO_AMAZON LONG X2
