--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -19,12 +19,12 @@
 1050394,6T61S,TURBO_COFFEE LONG X5
 29646,V201Z,TURBO_COCOA CALL X3
 26140,R750Z,TURBO_COCOA PUT X4
-1668923,804VS,TURBO_NASDAQ CALL 13650
-1562740,541YS,TURBO_NASDAQ PUT 15250
+1760120,204MS,TURBO_NASDAQ CALL 12550
+1853436,049CS,TURBO_NASDAQ PUT 18750
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
 27270,5N69Z,TURBO_GOLD CALL 1300
-1000551,7R49S,TURBO_GOLD PUT 2200
+#1000551,7R49S,TURBO_GOLD PUT 2200
 617655,18R6Z,TURBO_VSTOXX CALL 4.0
 1071306,2U62S,TURBO_VSTOXX PUT 52.0
 1136866,02C8S,TURBO_AMAZON LONG X2
