--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -39,6 +39,7 @@
 8884,VIX,FUT_IND_VIX,INTRADAY
 44369,VXN,FUT_IND_VXN,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
+6962,ADP,INT_ADP,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 389,AIRP,INT_AIR LIQUIDE,INTRADAY
 412,AIR,INT_AIRBUS,INTRADAY
