--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -20,22 +20,22 @@
 8910,PLT,FUT_COM_PLATINUM,INTRADAY
 8836,SI,FUT_COM_SILVER,INTRADAY
 8869,HG,FUT_COM_SUGAR,INTRADAY
-51,FCADJPY,FUT_FX_CADJPY,INTRADAY
-16,FEURCAD,FUT_FX_EURCAD,INTRADAY
+#51,FCADJPY,FUT_FX_CADJPY,INTRADAY
+#16,FEURCAD,FUT_FX_EURCAD,INTRADAY
 6,FEURGBP,FUT_FX_EURGBP,INTRADAY
 9,FEURJPY,FUT_FX_EURJPY,INTRADAY
 1,FEURUSD,FUT_FX_EURUSD,INTRADAY
-54,FGBPCAD,FUT_FX_GBPCAD,INTRADAY
-11,FGBPJPY,FUT_FX_GBPJPY,INTRADAY
-2,FGBPUSD,FUT_FX_GBPUSD,INTRADAY
-7,FUSDCAD,FUT_FX_USDCAD,INTRADAY
+#54,FGBPCAD,FUT_FX_GBPCAD,INTRADAY
+#11,FGBPJPY,FUT_FX_GBPJPY,INTRADAY
+#2,FGBPUSD,FUT_FX_GBPUSD,INTRADAY
+#7,FUSDCAD,FUT_FX_USDCAD,INTRADAY
 3,FUSDJPY,FUT_FX_USDJPY,INTRADAY
 8853,F40,FUT_IND_CAC40,INTRADAY
 8826,DX30,FUT_IND_DAX30,INTRADAY
-8874,USTEC,FUT_IND_NASDAQ100,INTRADAY
+1175151,USTEC,FUT_IND_NASDAQ100,INTRADAY
 8859,JP225,FUT_IND_NIKKEI,INTRADAY
-8864,US2000,FUT_IND_RUSSEL2000,INTRADAY
-8839,ES,FUT_IND_SP500,INTRADAY
+1174944,US2000,FUT_IND_RUSSEL2000,INTRADAY
+1175153,ES,FUT_IND_SP500,INTRADAY
 8884,VIX,FUT_IND_VIX,INTRADAY
 44369,VXN,FUT_IND_VXN,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
