--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -49,7 +49,7 @@
 7,FUSDCAD,USDCAD,FOREX
 3,FUSDJPY,USDJPY,FOREX
 14795,CACMS,CAC Mid & Small,INDICES
-172,DE30,DAX Future,INDICES
+172,DAX40,DAX40 Future,INDICES
 954696,GDOW,GDOW,INDICES
 170,US2000,RUSSELL2000,INDICES
 8941,TIP,TIPS,INDICES
