--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -20,15 +20,9 @@
 8910,PLT,FUT_COM_PLATINUM,INTRADAY
 8836,SI,FUT_COM_SILVER,INTRADAY
 8869,HG,FUT_COM_SUGAR,INTRADAY
-#51,FCADJPY,FUT_FX_CADJPY,INTRADAY
-#16,FEURCAD,FUT_FX_EURCAD,INTRADAY
 6,FEURGBP,FUT_FX_EURGBP,INTRADAY
 9,FEURJPY,FUT_FX_EURJPY,INTRADAY
 1,FEURUSD,FUT_FX_EURUSD,INTRADAY
-#54,FGBPCAD,FUT_FX_GBPCAD,INTRADAY
-#11,FGBPJPY,FUT_FX_GBPJPY,INTRADAY
-#2,FGBPUSD,FUT_FX_GBPUSD,INTRADAY
-#7,FUSDCAD,FUT_FX_USDCAD,INTRADAY
 3,FUSDJPY,FUT_FX_USDJPY,INTRADAY
 8853,F40,FUT_IND_CAC40,INTRADAY
 8826,DX30,FUT_IND_DAX30,INTRADAY
@@ -62,6 +56,7 @@
 9069,DBG,INT_DERICHEBOURG,INTRADAY
 391,EDF,INT_EDF,INTRADAY
 100156,EKI,INT_EKINOPS,INTRADAY
+943369,ELIOR,INT_ELIOR,INTRADAY
 395,ENGI,INT_ENGIE,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
 405,ESLX,INT_ESSILOR,INTRADAY
