--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -57,9 +57,9 @@
 40697,VUG,Vanguard Growth Index,INDICES
 40700,VTV,Vanguard Value Index,INDICES
 44336,VIX,VIX,INDICES
-44369,VXN,VXN,INDICES
 8884,VX,VIX Future,INDICES
 44337,VIX3M,VIX3M,INDICES
+44369,VXN,VXN,INDICES
 1061957,VXX,VXX,INDICES
 45378,XAR,AEROSPACE & DEFENSE,SECTORS
 38293,XBI,BIOTECH,SECTORS
@@ -80,6 +80,7 @@
 6408,APPL,APPLE,USA
 13845,GME,GAMESTOP,USA
 6369,GOOGL,GOOGLE,USA
+20871,HSBC,HSBC,USA
 252,MSFT,MICROSOFT,USA
 13063,NFLX,NETFLIX,USA
 13994,TSLA,TESLA,USA
