--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -72,6 +72,7 @@
 1097383,NEOEN,INT_NEOEN,INTRADAY
 943299,ALNOV,INT_NOVACYT,INTRADAY
 409,ORA,INT_ORANGE,INTRADAY
+1178245,OVH,INT_OVH,INTRADAY
 946353,ALQGC,INT_QUANTUM GENOMICS,INTRADAY
 419,RENA,INT_RENAULT,INTRADAY
 414,SASY,INT_SANOFI,INTRADAY
