Update Palmares and portfolio

--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -45,6 +45,7 @@
 7033,BIC,INT_BIC,INTRADAY
 7078,BIOX,INT_BIOMERIEUX,INTRADAY
 396,BNP,INT_BNP PARIBAS,INTRADAY
+7031,BOIR,INT_BOIRON,INTRADAY
 397,BOUY,INT_BOUYGUES,INTRADAY
 37591,BX4,INT_BX4,INTRADAY
 390,CAPP,INT_CAPGEMINI,INTRADAY
@@ -55,7 +56,6 @@
 407,ACA,INT_CREDIT AGRICOLE,INTRADAY
 9069,DBG,INT_DERICHEBOURG,INTRADAY
 391,EDF,INT_EDF,INTRADAY
-100156,EKI,INT_EKINOPS,INTRADAY
 943369,ELIOR,INT_ELIOR,INTRADAY
 395,ENGI,INT_ENGIE,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
