--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -30,8 +30,10 @@
 1175153,ES,FUT_IND_SP500,INTRADAY
 8884,VIX,FUT_IND_VIX,INTRADAY
 44369,VXN,FUT_IND_VXN,INTRADAY
+17629,ABS,INT_AB SCIENCE,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
 6962,ADP,INT_ADP,INTRADAY
+943320,ALAGR,INT_AGROGENERATION,INTRADAY
 385,AF,INT_AIR FRANCE - KLM,INTRADAY
 389,AIRP,INT_AIR LIQUIDE,INTRADAY
 412,AIR,INT_AIRBUS,INTRADAY
