--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -52,16 +52,17 @@
 404,CA,INT_CARREFOUR,INTRADAY
 6959,CO,INT_CASINO GUICHARD,INTRADAY
 7051,CGG,INT_CGG,INTRADAY
-6997,CNPP,INT_CNP,INTRADAY
 407,ACA,INT_CREDIT AGRICOLE,INTRADAY
 9069,DBG,INT_DERICHEBOURG,INTRADAY
 391,EDF,INT_EDF,INTRADAY
 395,ENGI,INT_ENGIE,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
 405,ESLX,INT_ESSILOR,INTRADAY
+6958,EPED,INT_FAURECIA,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
 1080089,ALKAL,INT_KALRAY,INTRADAY
 670,KER,INT_KERING,INTRADAY
+7070,LOIM,INT_KLEPIERRE,INTRADAY
 400,OR,INT_L'OREAL,INTRADAY
 47579,LVC,INT_LVC,INTRADAY
 399,LVMH,INT_LVMH,INTRADAY
@@ -84,7 +85,6 @@
 7086,TFFP,INT_TF1,INTRADAY
 416,TOT,INT_TOTAL,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
-671,URW,INT_UNIBAIL RODAMCO,INTRADAY
 6435,AMZN,INT_US_AMAZON,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
 6369,GOOGL,INT_US_GOOGLE,INTRADAY
@@ -95,3 +95,4 @@
 408,VK,INT_VALLOUREC,INTRADAY
 418,SGEF,INT_VINCI,INTRADAY
 415,VIV,INT_VIVENDI,INTRADAY
+953852,WLN,INT_WORLDLINE,INTRADAY
