--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -75,6 +75,7 @@
 1178245,OVH,INT_OVH,INTRADAY
 946353,ALQGC,INT_QUANTUM GENOMICS,INTRADAY
 419,RENA,INT_RENAULT,INTRADAY
+403,SGOB,INT_SAINT GOBAIN,INTRADAY
 414,SASY,INT_SANOFI,INTRADAY
 410,GLE,INT_SOCIETE GENERALE,INTRADAY
 6981,SW,INT_SODEXO,INTRADAY
