--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -52,6 +52,7 @@
 404,CA,INT_CARREFOUR,INTRADAY
 6959,CO,INT_CASINO GUICHARD,INTRADAY
 7051,CGG,INT_CGG,INTRADAY
+7089,CRIP,INT_CHARGEURS,INTRADAY
 407,ACA,INT_CREDIT AGRICOLE,INTRADAY
 9069,DBG,INT_DERICHEBOURG,INTRADAY
 391,EDF,INT_EDF,INTRADAY
@@ -94,6 +95,7 @@
 13994,TSLA,INT_US_TESLA,INTRADAY
 7022,VLOF,INT_VALEO,INTRADAY
 408,VK,INT_VALLOUREC,INTRADAY
+17898,VLS,INT_VALNEVA,INTRADAY
 418,SGEF,INT_VINCI,INTRADAY
 415,VIV,INT_VIVENDI,INTRADAY
 953852,WLN,INT_WORLDLINE,INTRADAY
