--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -38,6 +38,7 @@
 389,AIRP,INT_AIR LIQUIDE,INTRADAY
 412,AIR,INT_AIRBUS,INTRADAY
 6910,MT,INT_ARCELOR,INTRADAY
+32437,PRC,INT_ARTMARKET,INTRADAY
 13160,ATAR,INT_ATARI,INTRADAY
 7019,ATOS,INT_ATOS,INTRADAY
 393,CS,INT_AXA,INTRADAY
