--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -60,6 +60,7 @@
 395,ENGI,INT_ENGIE,INTRADAY
 6948,ERA,INT_ERAMET,INTRADAY
 405,ESLX,INT_ESSILOR,INTRADAY
+7042,ESSF,INT_ESSO,INTRADAY
 6958,EPED,INT_FAURECIA,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
 1080089,ALKAL,INT_KALRAY,INTRADAY
