--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -31,6 +31,7 @@
 8884,VIX,FUT_IND_VIX,INTRADAY
 44369,VXN,FUT_IND_VXN,INTRADAY
 17629,ABS,INT_AB SCIENCE,INTRADAY
+949746,ABNX,INT_ABIONYX PHARMA,INTRADAY
 386,AC,INT_ACCOR,INTRADAY
 6962,ADP,INT_ADP,INTRADAY
 943320,ALAGR,INT_AGROGENERATION,INTRADAY
