--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -9,7 +9,6 @@
 1050400,6T38S,TURBO_COPPER SHORT X5
 25583,SVIXZ,TURBO_VIX SHORT
 1050396,6T63S,TURBO_SUGAR LONG X5
-16515,U308Z,TURBO_NETFLIX CALL
 1102349,4V63S,TURBO_EURUSD PUT 1.29
 13626,F373Z,TURBO_EURUSD CALL 1.09
 23447,857UZ,TURBO_USDJPY CALL 90.77
@@ -18,8 +17,8 @@
 1289956,15H9S,TURBO_NATURAL GAS SHORT X5
 29646,V201Z,TURBO_COCOA CALL X3
 26140,R750Z,TURBO_COCOA PUT X4
-1760120,204MS,TURBO_NASDAQ CALL 12550
-1853436,049CS,TURBO_NASDAQ PUT 18750
+1855074,076RS,TURBO_NASQAQ SHORT X5
+982905,ND5LS,TURBO_NASQAQ LONG X5
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
 27270,5N69Z,TURBO_GOLD CALL 1300
