--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -9,20 +9,19 @@
 1050400,6T38S,TURBO_COPPER SHORT X5
 25583,SVIXZ,TURBO_VIX SHORT
 1050396,6T63S,TURBO_SUGAR LONG X5
-1102349,4V63S,TURBO_EURUSD PUT 1.29
-13626,F373Z,TURBO_EURUSD CALL 1.09
+13022,SUSDZ,TURBO_EURUSD SHORT X10
+29316,LUSDZ,TURBO_EURUSD LONG  X10
 23447,857UZ,TURBO_USDJPY CALL 90.77
 15242,W172Z,TURBO_USDJPY PUT 122
 1289955,98K5S,TURBO_NATURAL GAS LONG X5
-1289956,15H9S,TURBO_NATURAL GAS SHORT X5
+1805049,382VS,TURBO_NATURAL GAS SHORT X5
 29646,V201Z,TURBO_COCOA CALL X3
 26140,R750Z,TURBO_COCOA PUT X4
 1855074,076RS,TURBO_NASQAQ SHORT X5
 982905,ND5LS,TURBO_NASQAQ LONG X5
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
-27270,5N69Z,TURBO_GOLD CALL 1300
+#27270,5N69Z,TURBO_GOLD CALL 1300
 #1000551,7R49S,TURBO_GOLD PUT 2200
 617655,18R6Z,TURBO_VSTOXX CALL 4.0
-1071306,2U62S,TURBO_VSTOXX PUT 52.0
 1136866,02C8S,TURBO_AMAZON LONG X2
