--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -17,8 +17,8 @@
 1805049,382VS,TURBO_NATURAL GAS SHORT X5
 29646,V201Z,TURBO_COCOA CALL X3
 26140,R750Z,TURBO_COCOA PUT X4
-1855074,076RS,TURBO_NASQAQ SHORT X5
-982905,ND5LS,TURBO_NASQAQ LONG X5
+1855074,076RS,TURBO_NASDAQ SHORT X5
+982905,ND5LS,TURBO_NASDAQ LONG X5
 1290375,98K4S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
 #27270,5N69Z,TURBO_GOLD CALL 1300
