--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -19,7 +19,7 @@
 26140,R750Z,TURBO_COCOA PUT X4
 1855074,076RS,TURBO_NASDAQ SHORT X5
 982905,ND5LS,TURBO_NASDAQ LONG X5
-1290375,98K4S,TURBO_TESLA SHORT X5
+1555918,46Z2S,TURBO_TESLA SHORT X5
 1136882,03C1S,TURBO_TESLA LONG X2
 #27270,5N69Z,TURBO_GOLD CALL 1300
 #1000551,7R49S,TURBO_GOLD PUT 2200
