--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -70,6 +70,7 @@
 400,OR,INT_L'OREAL,INTRADAY
 47579,LVC,INT_LVC,INTRADAY
 399,LVMH,INT_LVMH,INTRADAY
+943360,MCPHY,INT_MCPHY ENERGY,INTRADAY
 6946,MMTP,INT_METROPLE,INTRADAY
 411,MICP,INT_MICHELIN,INTRADAY
 1088763,NAVYA,INT_NAVYA,INTRADAY
