--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -63,6 +63,7 @@
 405,ESLX,INT_ESSILOR,INTRADAY
 7042,ESSF,INT_ESSO,INTRADAY
 6958,EPED,INT_FAURECIA,INTRADAY
+943292,ALGAU,INT_GAUSSIN,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
 1080089,ALKAL,INT_KALRAY,INTRADAY
 670,KER,INT_KERING,INTRADAY
