--- a/InvestingDownload.user.cfg
+++ b/InvestingDownload.user.cfg
@@ -76,6 +76,7 @@
 45382,XTL,TELECOM,SECTORS
 45383,XTN,TRANSPORTATION,SECTORS
 45385,XLU,UTILITIES,SECTORS
+941155,BABA,ALIBABA,USA
 6435,AMZN,AMAZON,USA
 6408,APPL,APPLE,USA
 13845,GME,GAMESTOP,USA
