--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -59,6 +59,7 @@
 7042,ESSF,INT_ESSO,INTRADAY
 6958,EPED,INT_FAURECIA,INTRADAY
 943292,ALGAU,INT_GAUSSIN,INTRADAY
+19720,GNFT,INT_GENFIT,INTRADAY
 17795,IPH,INT_INNATE PHARMA,INTRADAY
 1080089,ALKAL,INT_KALRAY,INTRADAY
 670,KER,INT_KERING,INTRADAY
