--- a/SocGenIntradayDownload.user.cfg
+++ b/SocGenIntradayDownload.user.cfg
@@ -25,3 +25,4 @@
 #1000551,7R49S,TURBO_GOLD PUT 2200
 617655,18R6Z,TURBO_VSTOXX CALL 4.0
 1136866,02C8S,TURBO_AMAZON LONG X2
+1409126,46N6S,TURBO_APPLE LONG X5
