--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -82,6 +82,7 @@
 6981,SW,INT_SODEXO,INTRADAY
 6990,SOIT,INT_SOITEC,INTRADAY
 7058,LOCAL,INT_SOLOCAL,INTRADAY
+1169015,STLA,INT_STELLANTIS,INTRADAY
 417,STM,INT_STMICROELECTRONICS,INTRADAY
 13166,TCH,INT_TECHNICOLOR,INTRADAY
 7086,TFFP,INT_TF1,INTRADAY
