--- a/InvestingIntradayDownload.user.cfg
+++ b/InvestingIntradayDownload.user.cfg
@@ -88,6 +88,7 @@
 7086,TFFP,INT_TF1,INTRADAY
 416,TOT,INT_TOTAL,INTRADAY
 7003,TRIA,INT_TRIGANO,INTRADAY
+6984,UBIP,INT_UBISOFT,INTRADAY
 941155,BABA,INT_US_ALIBABA,INTRADAY
 6435,AMZN,INT_US_AMAZON,INTRADAY
 6408,APPL,INT_US_APPLE,INTRADAY
